Add: weather effect on energy consumption, thor effect, prefab abstract class Update: map structure